# homely

./: .dockerignore  .gitignore  .gutctags  CHANGELOG.rst  LICENSE  PUBLISHING.md  README.md  README.rst  SECTIONS.md  TODO.txt  makeslides.sh  publish.py  pyproject.toml  release.sh  requirements.txt  requirements_dev.txt  setup.py
.github/workflows/: automated-release.yaml  automated-tests.yaml
.vimproject/: vimrc.vim
.vimproject/ftplugin/: python.vim  rst.vim
docs/: Makefile  advanced-tutorial.rst  automatic-cleanup.rst  conf.py  default.slidy  index.rst  installation.rst  intro.rst  license.rst  pipinstall.rst  python2.rst  slides.rst  tutorial.rst
docs/_templates/: homelytoc.html
docs/ref/: cli.rst  files.rst  general.rst  install.rst  pipinstall.rst  system.rst  ui.rst
homely/: __init__.py  _asyncioutils.py  _changes.py  _cleaners.py  _cli.py  _engine.py  _engine2.py  _errors.py  _ui.py  _utils.py  _virtualenv.py  engine.py  files.py  general.py  install.py  pipinstall.py  powerline.py  system.py  ui.py  utils.py
homely/_scripts/: homely.py
homely/_test/: __init__.py  system.py
homely/_vcs/: __init__.py  git.py  testhandler.py
homely/scripts/: homely.py
test/: README.md  __init__.py  conftest.py  test_changes.py  test_engine2.py  test_gitvcs.py  test_sections.py  test_utils.py  test_virtualenvs.py  tests.Dockerfile
test/features/: test_homely_files.py  test_includes.py
test/system/: cmdline.py  conftest.py  test_homely_add_repolist.py  test_homely_autoupdate.py  test_homely_remove.py  test_homely_repo_virtualenv.py  test_homely_update.py  test_lineinfile.py  test_symlink.py
test/unit/homely/: test_engine2.py  test_utils.py
test/unit/homely/_vcs/: test_git.py
