[project]
name = "homely"
description = "Automate the installation of your personal config files and favourite tools using Python."
authors = [
    {name = "Peter Hodge"},
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["dotfiles", "environment", "configuration", "tools", "utilities", "automation"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Utilities",
]

requires-python = ">=3.10"
# this also needs to be updated in homely/__init__.py
version = "0.20.3"

dependencies = [
    "python-daemon>=2.3.0",
    "requests>=2.25.1",
    "click>=8.3",
    # tomli is required before python 3.11
    "tomli>=2.3.0 ; python_full_version < '3.11'",
]

[dependency-groups]
dev = [
    "freezegun>=1.3.0",
    "isort>=6.1.0",
    "mypy>=1.19.1",
    "pytest>=6.2.4",
    "sphinx>=4.5.0",
    "sphinx-autobuild>=2021.3.14",
    "twine>=3.2.0",
    "types-click>=7.1.8",
    "types-requests>=2.31.0.6",
]


[project.urls]
Documentation = "https://homely.readthedocs.io/"


[project.scripts]
homely = "homely._cli:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.mypy]
# the oldest python version we support
python_version = "3.10"
disallow_untyped_defs = true


[[tool.mypy.overrides]]
# burn-down untyped defs in these modules to gradually add type annotations to the whole project
module = [
    "homely._asyncioutils",
    "homely._cli",
    "homely._engine2",
    "homely._errors",
    "homely._test.system",
    "homely._test",
    "homely._ui",
    "homely._vcs.git",
    "homely._vcs.testhandler",
    "homely._vcs",
    "homely.files",
    "homely.general",
    "homely.install",
    "homely.pipinstall",
    "homely.powerline",
    "homely.system",
    "test.*",
]
disallow_untyped_defs = false
